programmers-challenges/style.css
* {
  box-sizing: content-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: "Inter", sans-serif;
  color: #263747;
  height: 100vh;
}

a {
  text-decoration: none;
  color: #263747;
}

ul {
  list-style: none;
}

/* Mobile */
/* nav */
.top-nav {
  background-color: #0c151c;
  padding: 6px 16px;
}

.top-nav .logo {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.top-nav .logo-mobile {
  display: block;
  width: 24px;
}

.top-nav .logo-desktop {
  display: none;
}

.top-nav .logo i {
  width: 24px;
  color: #fff;
}

.top-nav-global,
.top-nav-user-menu {
  display: none;
}

/* nav-tabs */
.challenges-tabs-wrap {
  margin-bottom: 24px;
  border-bottom: 1px solid #dee2e6;
}

.nav-tabs {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
}

.nav-tabs li {
  margin-left: 16px;
}

.nav-tabs li:first-child {
  margin-left: 0;
}

.nav-tabs .nav-item a {
  display: block;
  font-size: 15px;
  line-height: 1.6;
  letter-spacing: -0.009em;
  padding: 8px 0;
  transition: color 100ms ease-in-out;
}

.nav-tabs .nav-item a.active {
  color: #0078ff;
  box-shadow: inset 0 -0.1875rem #0078ff;
}

.nav-tabs .nav-item a:hover {
  color: #0078ff;
}

.banner-wrap {
  padding: 0 16px;
  margin-bottom: 40px;
}

/* banner */
.banner {
  height: 160px;
  border-radius: 12px;
  margin: 0 auto;
  background-image: url(https://grepp-programmers.s3.amazonaws.com/image/origin/production/banner/96392/f82e39e9-dab2-4373-acf6-53c2c89e47fb.png);
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
}

/* main */
.main {
  border-bottom: 1px solid #dee2e6;
  padding-bottom: 40px;
}

/* container */
.challenge-container {
  padding: 0 16px;
}

.challenge-container-header {
  padding: 0 16px;
  margin-bottom: 24px;
}

.container-title {
  font-size: 22px;
  line-height: 1.4;
  margin-bottom: 8px;
  letter-spacing: -0.006136363636363637em;
}

.container-desc {
  font-size: 15px;
  line-height: 1.6;
  letter-spacing: -0.009;
}

.container-desc strong {
  box-shadow: inset 0 -0.5rem #ffeb3b;
  font-weight: 400;
}

.challenge-container-header .col-right {
  display: none;
}

.card-list .col-item {
  padding: 0 0 16px 0;
}

.challenge-card {
  position: relative;
  padding: 24px 16px;
  border-top: 1px solid #d7e2eb;
  transition: box-shadow 80ms ease-in-out, color 80ms ease-in-out;
}

.challenge-card:hover {
  box-shadow: 0.0625rem 0.1875rem rgb(20 20 94 / 12%),
    0 0.1875rem 0.4375rem rgb(20 20 94 / 10%);
}

.challenge-card i {
  position: absolute;
  top: 8px;
  right: 8px;
  width: 24px;
  color: #b2c0cc;
}

.challenge-card-title {
  font-size: 18px;
  line-height: 1.6;
  letter-spacing: -0.009em;
  margin-bottom: 8px;
}

.challenge-card-desc {
  font-size: 14px;
  line-height: 1.5714285714;
  letter-spacing: -0.0071428571428571435em;
  margin-bottom: 24px;
  color: #98a8b9;
}

.card-label-group {
  display: flex;
}

.card-label-item {
  flex-grow: 1;
  margin: 0 1rem;
}

.card-label-item:first-child {
  margin-left: 0;
  padding: 0;
  border: none;
}

.card-label-item dt {
  font-size: 12px;
  line-height: 1.5;
  letter-spacing: -0.00975em;
  color: #0078ff;
}

.card-label-item dd {
  font-size: 15px;
  line-height: 1.6;
  letter-spacing: -0.009em;
  color: #98a8b9;
}

/* footer */
footer {
  padding: 40px 16px;
}

.footer-menu {
  margin-bottom: 24px;
}

.footer-menu-title,
.footer-menu-item {
  font-size: 13px;
  line-height: 1.5;
  letter-spacing: -0.009em;
  font-weight: 700;
  color: #44576c;
  margin-bottom: 8px;
}

.footer-menu-item {
  font-weight: 400;
  margin-bottom: 2px;
}

.footer-menu-item.operation-time {
  font-size: 12px;
  color: #98a8b9;
  margin-top: 8px;
}

.footer-address .link-brand {
  display: block;
  font-size: 12px;
  line-height: 1.5;
  letter-spacing: -0.009em;
  font-weight: 700;
  color: #98a8b9;
  margin-bottom: 8px;
}

.footer-address p {
  font-size: 12px;
  line-height: 1.6;
  color: #98a8b9;
  letter-spacing: -0.008333333333333333em;
}

/* Greater than 768px (Tablet) */
@media screen and (min-width: 768px) {
  /* nav */
  /* banner */
  .banner {
    height: 218px;
  }

  /* main */
  .main {
    padding-bottom: 80px;
  }

  /* container */
  .container-title {
    font-size: 26px;
    line-height: 1.4;
  }

  .container-desc {
    font-size: 16px;
    line-height: 1.6;
  }

  .card-list {
    display: flex;
    flex-wrap: wrap;
  }

  .card-list .col-item {
    box-sizing: border-box;
    padding: 0 8px;
    flex-basis: 50%;
  }

  .challenge-card {
    padding-left: 8px;
    /* padding-right: px; */
  }

  .challenge-card-title {
    font-size: 20px;
    line-height: 1.6;
  }

  /* footer */
  footer {
    padding-right: 0;
    margin: 0 16px;
  }

  .footer-menu-wrap {
    display: flex;
  }

  .footer-menu {
    margin-right: 24px;
  }

  .footer-menu:last-child {
    margin-right: 0;
  }
}

/* Desktop */
@media screen and (min-width: 992px) {
  /* nav */
  .top-nav {
    display: flex;
    align-items: center;
    justify-content: space-between;
    transition: color 250ms ease-in-out;
  }

  .top-nav .logo-mobile,
  .top-nav .logo i {
    display: none;
  }

  .top-nav .logo-desktop {
    display: block;
    width: 182px;
  }

  .top-nav-global a:hover,
  .top-nav-user-menu i:hover {
    color: #fff;
  }

  .top-nav-global {
    display: flex;
  }

  .top-nav-user-menu {
    display: flex;
  }
  .top-nav-user-menu .nav-global-item a {
    display: block;
  }

  .nav-global-item a {
    padding: 4px 8px;
    font-size: 16px;
    line-height: 1.6;
    letter-spacing: -0.009em;
    color: #b2c0cc;
    font-weight: 500;
  }

  .top-nav-global .divider::after {
    content: "|";
    font-size: 8px;
    margin: 0 8px;
    color: #44576c;
  }

  .top-nav-user-menu i {
    width: 24px;
    color: #b2c0cc;
    padding: 8px 4px;
  }

  /* nav-tabs */
  .nav-tabs a {
    font-size: 16px;
  }

  /* main */
  /* banner */

  /* container */
  .challenge-container {
    border: 1px solid #d7e2eb;
    border-radius: 12px;
    margin: 0 16px;
    padding: 24px 16px 16px 16px;
  }
  .challenge-container-header {
    display: flex;
  }

  .challenge-container-header .col-left {
    margin-right: 80px;
  }

  .container-title {
    font-size: 26px;
    line-height: 1.4;
  }

  .container-desc {
    font-size: 16px;
    line-height: 1.5;
  }

  .challenge-container-header .col-right {
    display: block;
  }

  .challenge-container-header .col-right img {
    display: block;
    width: 300px;
  }

  .card-list .col-item {
    box-sizing: border-box;
    /* padding: 0 8px; */
    flex-basis: 33.3333%;
  }

  .card-list li:nth-child(3n + 1) {
    padding-left: 0;
  }

  .card-list li:nth-child(3n) {
    padding-right: 0;
  }

  .challenge-card:hover i {
    color: #0078ff;
  }

  /* footer */
  footer {
    margin: 0 16px;
  }

  .footer-menu {
    margin-right: 40px;
  }
}

/* Over 1200px Destop */
@media screen and (min-width: 1200px) {
  .main {
    margin: 0 auto;
    max-width: 1200px;
  }
  .footer-wrap {
    margin: 0 auto;
    max-width: 1200px;
  }
}

